--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,3 +6,7 @@
 .margin-left-70 {
 	margin-left: 70px;
 }
+
+.div-flex {
+	display: flex;
+}
